--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -68,12 +68,19 @@
                     <li class="nav__item">
                         <a href="#home" class="nav__link active-link">Home</a>
                     </li>
+                    {% if userSession != 'Anonymous' %}
+                    <li class="nav__item">
+                        <span class="nav__link">안녕하세요, {{userSession}}언능 사라져버렷</span>
+                    </li>
+
                     <!--<li class="nav__item">
                         <button id="logout-button" type="button" class="nav__link" style="background:none; border:none; padding:0; cursor:pointer;">Logout</button>
                     </li>-->
+                    {% else %}
                     <li class="nav__item">
                         <a href="{% url 'users:login' %}" class="nav__link">Login</a>
                     </li>
+                    {% endif %}
                 </ul>
 
                 <div class="nav__dark">
