--- a/diaryapp/templates/diaryapp/detail_diary_otheruser.html
+++ b/diaryapp/templates/diaryapp/detail_diary_otheruser.html
@@ -37,7 +37,7 @@
         <div class="diary-actions">
             <!-- 리스트로 돌아가는 버튼 -->
             <button class="btn-diary-action">
-                <a href="{% url 'list_user_diary' %}">리스트로 돌아가기</a>
+                <a href="{% url 'list_diary' %}">리스트로 돌아가기</a>
             </button>
         </div>
         <br/><br/>
