--- a/diaryapp/templates/diaryapp/detail_diary.html
+++ b/diaryapp/templates/diaryapp/detail_diary.html
@@ -48,7 +48,7 @@
 
             <!-- 리스트로 돌아가는 버튼 -->
             <button class="btn-diary-action">
-                <a href="{% url 'list_diary' %}">리스트로 돌아가기</a>
+                <a href="{% url 'list_user_diary' %}">리스트로 돌아가기</a>
             </button>
         </div>
         <br/><br/>
