--- a/travel_recommend/templates/recommendations/create_schedule.html
+++ b/travel_recommend/templates/recommendations/create_schedule.html
@@ -794,22 +794,22 @@ running wsl-bootstrap: exit status 1
                                         </div>
                                     </div>
 
-                                <div class="card option-card" onclick="toggleSelection(this, 'accommodation_type', '게스트하우스')">
+                                <div class="card custom-option-card" onclick="toggleSelection(this, 'accommodation_type', '게스트하우스')">
                                     <div class="card-body">
                                         <p class="card-text">게스트하우스</p>
                                     </div>
                                 </div>
-                                <div class="card option-card" onclick="toggleSelection(this, 'accommodation_type', '유스호스텔')">
+                                <div class="card custom-option-card" onclick="toggleSelection(this, 'accommodation_type', '유스호스텔')">
                                     <div class="card-body">
                                         <p class="card-text">유스호스텔</p>
                                     </div>
                                 </div>
-                                <div class="card option-card" onclick="toggleSelection(this, 'accommodation_type', '민박')">
+                                <div class="card custom-option-card" onclick="toggleSelection(this, 'accommodation_type', '민박')">
                                     <div class="card-body">
                                         <p class="card-text">민박</p>
                                     </div>
                                 </div>
-                                <div class="card option-card" onclick="toggleSelection(this, 'accommodation_type', '한옥')">
+                                <div class="card custom-option-card" onclick="toggleSelection(this, 'accommodation_type', '한옥')">
                                     <div class="card-body">
                                         <p class="card-text">한옥</p>
                                     </div>
@@ -827,14 +827,14 @@ running wsl-bootstrap: exit status 1
                         <h2>6. 여행 취향 선택</h2>
                         <label>당신의 여행 취향을 선택하세요</label>
                         <div class="card-deck">
-                            <div class="card option-card" onclick="toggleSelection(this, 'travel_preference', '느긋한 여행')">
+                            <div class="card custom-option-card" onclick="toggleSelection(this, 'travel_preference', '느긋한 여행')">
                                 <div class="card-body">
                                     <p class="card-text">느긋한 여행</p>
                                 </div>
                             </div>
-                            <div class="card option-card" onclick="toggleSelection(this, 'travel_preference', '바삐 돌아다니는 여행')">
+                            <div class="card custom-option-card" onclick="toggleSelection(this, 'travel_preference', '바삐 돌아다니는 여행')">
                                 <div class="card-body">
-                                    <p class="card-text">바삐 돌아다니는 여행</p>
+                                    <p class="card-text">부지런한 여행</p>
                                 </div>
                             </div>
                         </div>
